# live

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/shuaijun/live/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LIVE.md  native-lib.cpp
app/src/main/cpp/live/groupsock/: GroupsockHelper.cpp
app/src/main/cpp/live/liveMedia/: FileSink.cpp  GenericMediaServer.cpp  H263plusVideoStreamParser.cpp  H264or5VideoFileSink.cpp  RTSPClient.cpp  RTSPServer.cpp  TLSState.cpp
app/src/main/cpp/live/liveMedia/include/: H264VideoFileSink.hh  H264or5VideoFileSink.hh  RTSPClient.hh
app/src/main/cpp/live/testProgs/: audio-PCMU-2  mikeyParse  playSIP  registerRTSPStream  sapWatch  testH264VideoToTransportStream  testRTSPClient.cpp  testRTSPClient.h
app/src/main/cpp/openssl/arm64-v8a/: libssl.so.1.1
app/src/main/cpp/openssl/arm64-v8a/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/openssl/armeabi-v7a/: libcrypto.so.1.1  libssl.so.1.1
app/src/main/cpp/openssl/armeabi-v7a/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/java/com/shuaijun/live/: MainActivity.kt
app/src/test/java/com/shuaijun/live/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
